fix: don't transition button colors
Looks ugly IMO.

--- a/frontend/global.css
+++ b/frontend/global.css
@@ -216,9 +216,6 @@ button {
 	cursor: pointer;
 	border: none;
 	outline: none;
-	transition:
-		background var(--transition),
-		border-color var(--transition);
 	line-height: var(--leading-normal);
 }
 
